dtc: Use AOSP's fork of dtc
We apparently need their fork so that the generated dtbo.img works,
since we're using Android's overlay dtb.

They've done horrible things to it to support broken AOSP tools, so we
hack around that by introducing our own make file and wiring the whole
thing into the kernel's build system seamlessly.

Since we're now bundling in the correct dtc, we also no longer respect
the config's chosen dtc.

Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>
Signed-off-by: Danny Lin <danny@kdrag0n.dev>
Signed-off-by: Julian Liu <wlootlxt123@gmail.com>
[Adjust for subtree]
Signed-off-by: Ratoriku <a1063021545@gmail.com>

--- a/scripts/Makefile
+++ b/scripts/Makefile
@@ -41,4 +41,4 @@ subdir-$(CONFIG_MODVERSIONS) += genksyms
 subdir-$(CONFIG_SECURITY_SELINUX) += selinux
 
 # Let clean descend into subdirs
-subdir-	+= basic dtc gdb kconfig mod ufdt
+subdir-	+= basic dtc-aosp gdb kconfig mod ufdt
