--- a/drivers/soc/Makefile
+++ b/drivers/soc/Makefile
@@ -27,3 +27,11 @@ obj-$(CONFIG_ARCH_U8500)	+= ux500/
 obj-$(CONFIG_PLAT_VERSATILE)	+= versatile/
 obj-y				+= xilinx/
 obj-$(CONFIG_ARCH_ZX)		+= zte/
+obj-$(CONFIG_OPLUS_SYSTEM_KERNEL)	+= oplus/system/
+#ifdef OPLUS_FEATURE_SENSOR_SMEM
+obj-y						+= oplus/sensor/
+#endif
+
+#ifdef OPLUS_FEATURE_TP_BASIC
+obj-$(CONFIG_OPLUS_DEVICE_IFNO)  +=  oplus/device_info/
+#endif /* OPLUS_FEATURE_TP_BASIC */
