--- a/drivers/soc/oplus/system/Kconfig
+++ b/drivers/soc/oplus/system/Kconfig
@@ -40,6 +40,7 @@ source "drivers/soc/oplus/system/feedback/Kconfig"
 source "drivers/soc/oplus/system/oplus_project/Kconfig"
 source "drivers/soc/oplus/system/project_info/Kconfig"
 source "drivers/soc/oplus/system/cmdline_parser/Kconfig"
+source "drivers/soc/oplus/system/param/Kconfig"
 #ifdef OPLUS_FEATURE_MM_FEEDBACK
 source "drivers/soc/oplus/system/oplus_mm_fb/Kconfig"
 #endif /* OPLUS_FEATURE_MM_FEEDBACK */
