--- a/drivers/soc/oplus/system/Makefile
+++ b/drivers/soc/oplus/system/Makefile
@@ -5,6 +5,7 @@ obj-y 	+= platform.o
 obj-$(CONFIG_OPLUS_FEATURE_FEEDBACK) 	+= feedback/
 obj-$(CONFIG_OPLUS_FEATURE_OPROJECT) 	+= oplus_project/
 obj-$(CONFIG_OPLUS_FEATURE_CMDLINE)     += cmdline_parser/
+obj-$(CONFIG_PARAM_READ_WRITE)     += param/
 
 ifdef CONFIG_OPLUS_SYSTEM_KERNEL_QCOM
 obj-$(CONFIG_OPLUS_FEATURE_PROJECTINFO)	+=  project_info/
